# routes/index.js
@@ -5,5 +5,5 @@ router.get('/', (req, res) => {
     // #swagger.tags = ['Hello world'];
   res.send('Hello World!');
 });
-router.use('/users',require('./users'));
+router.use('/contact',require('./users'));
 module.exports = router;
